Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
============================
HYPERMAIL VERSION 2.3.1:
============================

 Bill Shannon (June 7, 2018)
  - Add charset alias for Thai and Chinese
  - The markup for access key "j" to jump to the start of a message
    was only being added when the showhtml configuration option
    was disabled
  - Setting the describe_folder configuration option has no effect on the
    display of the folder index page
  - In some cases hypermail failed to null terminate the charset name
    when copying it, resulting in bogus charset names
  - Hypermail would segfault if given the bogus From line "From: <a@b.com"
  - In some cases, when no new message was added to the archive,
    would segfault because of a null pointer

============================
HYPERMAIL VERSION 2.3.0:
============================

 Ivan Kuraj (Apr 3, 2015)
  - Correct includes for new glibc

 Jose Kahan (Oct 27, 2009)
  - Added two new accesskeys in messages: 't' ->  next message
    in thread, 'd' -> next message

 Jose Kahan (Oct 26, 2009)
  - Updated hmrc.4 and hmrc.html to descrbie the new features.

 Jose Kahan (Oct 26, 2009)
  Various fixes / enhancements developed at W3C by Fumihiro Kato,
  Daigo Matsubara and myself:
  - Markup changes for deleted messages that are kept.
  - New directive: htmlmessage_deleted for setting a custom HTML
    message for the body of deleted messages.
  - New directive: delete_incremental to disable deleting of existing
    messages in the archive when doing an incremental add of a new
    message. In some setups, if this feature is enabled, replies to
    deleted messages will cause uncontrolled markup escape and
    expansion. Feature is enabled by default.
  - Updated list of known protocol uris that hypermail will convert
    into links.
  - Bug fix: setup.c:MakeConfig() CFG_SWITCH was using long instead of
    int.
  - New directive: fragment_prefix for customizing the prefix that is